codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__astra_reasoning_picker.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for GPT-6 Astra

  1. Low               Fast responses with lighter reasoning
› 2. Medium (default)  Balances speed and reasoning depth for everyday tasks
  3. High              Greater reasoning depth for complex problems
  4. Extra high        Extra high reasoning depth for complex problems
  5. More reasoning…   Max consumes usage limits faster

  Press enter to confirm or esc to go back
